sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              SPEAKER DIARIZATION                            */
/* ========================================================================== */

/* ====================  Configuration Structures  =========================== */

/** Diarization processing configuration */
typedef struct {
    int32_t min_speakers; /* Minimum number of speakers (0 = auto-detect) */
    int32_t max_speakers; /* Maximum number of speakers (0 = no limit) */
} ml_DiarizeConfig;
/** Speech segment structure */
typedef struct {
    float start_time;    /* Segment start time in seconds */
    float end_time;      /* Segment end time in seconds */
    char* speaker_label; /* Speaker label (e.g., "SPEAKER_00") (caller must free with ml_free) */
} ml_DiarizeSpeechSegment;
typedef struct ml_Diarize ml_Diarize; /* Opaque diarization handle */
/* ====================  Lifecycle Management  ============================== */

/** Input structure for creating a diarization instance */
typedef struct {
    const char*    model_name; /** Name of the model */
    ml_Path        model_path; /** Path to the model folder */
    ml_ModelConfig config;     /** Model configuration */
    ml_PluginId    plugin_id;  /** Plugin to use for the model */
    const char*    device_id;  /** Device to use for the model, NULL for default device */
    const char*    license_id; /** Licence id for loading NPU models, must be provided upon the first use of the license
                                  key. null terminated string */
    const char* license_key;   /** Licence key for loading NPU models, null terminated string */
} ml_DiarizeCreateInput;
/**
 * @brief Create and initialize a diarization instance
 *
 * @param input[in]: Input parameters for the diarization instance creation
 * @param out_handle[out]: Pointer to the diarization handle. Must be freed with ml_diarize_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_diarize_create(const ml_DiarizeCreateInput* input, ml_Diarize** out_handle);
/**
 * @brief Destroy diarization instance and free associated resources
 *
 * @param handle[in]: The diarization handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_diarize_destroy(ml_Diarize* handle);
/* ====================  Diarization Inference  ================================ */

/** Input structure for diarization inference */
typedef struct {
    ml_Path                 audio_path; /** Path to audio file */
    const ml_DiarizeConfig* config;     /** Diarization configuration (optional, can be nullptr) */
} ml_DiarizeInferInput;
/** Output structure for diarization inference */
typedef struct {
    ml_DiarizeSpeechSegment* segments;      /** Array of speech segments (caller must free with ml_free) */
    int32_t                  segment_count; /** Number of segments */
    int32_t                  num_speakers;  /** Total unique speakers detected */
    float                    duration;      /** Total audio duration in seconds */
    ml_ProfileData           profile_data;  /** Profiling data for the diarization operation */
} ml_DiarizeInferOutput;
/**
 * @brief Perform speaker diarization on audio file
 *
 * Determines "who spoke when" in the audio recording, producing time-stamped segments
 * with speaker labels. Segments are time-ordered and non-overlapping.
 *
 * @param handle[in]: Diarization handle
 * @param input[in]: Input parameters for diarization (audio file path and optional configuration)
 * @param output[out]: Output data containing the diarization results
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_diarize_infer(ml_Diarize* handle, const ml_DiarizeInferInput* input, ml_DiarizeInferOutput* output);